fix(css): Add flex wrap, justify the content and add a gap between the keys

--- a/js_calculator/styles.css
+++ b/js_calculator/styles.css
@@ -38,15 +38,19 @@
 
 .digit-keypad{
     display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
     width:480px;
     height:500px;
     border: 2px solid white;  
     border-radius: 10px;
     padding:10px;
+    gap:5px;
     border-right: none;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 }
+
 
 .function-keypad{
     display:flex;
